--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,8 +25,8 @@
                 </div>
                 <div class="col-md-6">
                   <p class="download">
-                    <a href="https://docs.google.com/spreadsheets/d/1eMAdjdADNSFxl1J2IV15G0byzb5cVHEh-G8u0inasJY/edit">
-                    <span class="fa fa-download">&nbsp;&nbsp;</span>Der Datensatz</p>
+                    <a href="https://lobbyranking.de/laender/baden-wuerttemberg/">
+                    <span class="fa fa-download">&nbsp;&nbsp;</span>Der Datensatz - Analysen und Auswertung</p>
                   </a>
                 </div>
               </div>
