--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,8 +25,8 @@
                 </div>
                 <div class="col-md-6">
                   <p class="download">
-                    <a href="https://lobbyranking.de/laender/baden-wuerttemberg/">
-                    <span class="fa fa-download">&nbsp;&nbsp;</span>Der Datensatz - Analysen und Auswertung</p>
+                    <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fwww.transparency.de%2Findex.php%3FeID%3Dtx_securedownloads%26p%3D%26u%3D0%26g%3D0%26t%3D1640190138%26hash%3D0c9cd12d12556547340ba0afaef6a7aff7ed736e%26file%3Dfileadmin%2FRedaktion%2FMitgliederbereich_Intern%2FArbeitsgruppen%2FPolitik%2FDer_Datensatz__neu_2.xlsx&wdOrigin=BROWSELINK">
+                    <span class="fa fa-download">&nbsp;&nbsp;</span>Der Datensatz - Analysen und Auswertung (excel)</p>
                   </a>
                 </div>
               </div>
