--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-md-6">
                   <p class="download">
-                    <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fwww.transparency.de%2Findex.php%3FeID%3Dtx_securedownloads%26p%3D%26u%3D0%26g%3D0%26t%3D1640190138%26hash%3D0c9cd12d12556547340ba0afaef6a7aff7ed736e%26file%3Dfileadmin%2FRedaktion%2FMitgliederbereich_Intern%2FArbeitsgruppen%2FPolitik%2FDer_Datensatz__neu_2.xlsx&wdOrigin=BROWSELINK">
+                    <a href="https://www.transparency.de/aktuelles/detail/article/lobbyranking-der-bundeslaender-vorgestellt/index.php?eID=tx_securedownloads&p=36&u=0&g=0&t=1646942543&hash=edc1c49e373c901568111f39b763b6bb79f6eadb&file=/fileadmin/Redaktion/Mitgliederbereich_Intern/Arbeitsgruppen/Politik/Der_Datensatz_V15_1_.xlsx">
                     <span class="fa fa-download">&nbsp;&nbsp;</span>Der Datensatz - Analysen und Auswertung (excel)</p>
                   </a>
                 </div>
