--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <p class="download">
-                    <a href="/static/files/Broschüre_Lobbyranking_Bundesländer_01.pdf">
+                    <a href="https://www.transparency.de/aktuelles/detail/article/update-des-lobbyrankings-der-bundeslaender-trotz-leichter-verbesserungen-noch-viel-luft-nach-oben/index.php?eID=tx_securedownloads&p=36&u=0&g=0&t=1646993617&hash=50f12efc5c428c32056199d3b317277b5040c757&file=/fileadmin/Redaktion/Mitgliederbereich_Intern/Arbeitsgruppen/Politik/Lobbyranking_Broschuere_2022.pdf">
                       <span class="fa fa-download">&nbsp;&nbsp;</span>Die Broschüre zum Ranking <br />  pdf | <1MB
                     </a>
                 </div>
