--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,13 +19,13 @@
               <div class="row">
                 <div class="col-md-6">
                   <p class="download">
-                    <a href="https://www.transparency.de/aktuelles/detail/article/update-des-lobbyrankings-der-bundeslaender-trotz-leichter-verbesserungen-noch-viel-luft-nach-oben/index.php?eID=tx_securedownloads&p=36&u=0&g=0&t=1647354017&hash=d715e5835c9e3ef70766fbc20485f4b175bed9c2&file=/fileadmin/Redaktion/Mitgliederbereich_Intern/Arbeitsgruppen/Politik/Broschu__re_Lobbyranking_2203_01_gelayoutet.pdf">
+                    <a href="https://github.com/TransparencyGermany/lrd/blob/master/static/files/Brosch%C3%BCre_Lobbyranking_Bundesl%C3%A4nder_01.pdf">
                       <span class="fa fa-download">&nbsp;&nbsp;</span>Die Broschüre zum Ranking <br />  pdf | <1MB
                     </a>
                 </div>
                 <div class="col-md-6">
                   <p class="download">
-                    <a href="https://www.transparency.de/aktuelles/detail/article/update-des-lobbyrankings-der-bundeslaender-trotz-leichter-verbesserungen-noch-viel-luft-nach-oben/index.php?eID=tx_securedownloads&p=36&u=0&g=0&t=1647356731&hash=35c28832ff031ffeb028ebdbcd5ced1c6ab005c5&file=/fileadmin/Redaktion/Mitgliederbereich_Intern/Arbeitsgruppen/Politik/Der_Datensatz_V15_1_.xlsx">
+                    <a href="https://github.com/TransparencyGermany/lrd/blob/master/static/files/Der_Datensatz_V15_15.03.22.xlsx">
                     <span class="fa fa-download">&nbsp;&nbsp;</span>Der Datensatz - Analysen und Auswertung (excel)</p>
                   </a>
                 </div>
