--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <p class="download">
-                    <a href="https://github.com/TransparencyGermany/lrd/blob/master/static/files/Brosch%C3%BCre_Lobbyranking_Bundesl%C3%A4nder_01.pdf">
+                    <a href="https://raw.githubusercontent.com/TransparencyGermany/lrd/master/static/files/Brosch%C3%BCre_Lobbyranking_Bundesl%C3%A4nder_01.pdf">
                       <span class="fa fa-download">&nbsp;&nbsp;</span>Die Broschüre zum Ranking <br />  pdf | <1MB
                     </a>
                 </div>
