--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-md-6">
                   <p class="download">
-                    <a href="https://github.com/TransparencyGermany/lrd/blob/master/static/files/Der_Datensatz_V15_15.03.22.xlsx">
+                    <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fraw.githubusercontent.com%2FTransparencyGermany%2Flrd%2Fmaster%2Fstatic%2Ffiles%2FDer_Datensatz_V15_15.03.22.xlsx&wdOrigin=BROWSELINK">
                     <span class="fa fa-download">&nbsp;&nbsp;</span>Der Datensatz - Analysen und Auswertung (excel)</p>
                   </a>
                 </div>
