--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,6 +52,7 @@
             <a href="https://www.transparency.de/" target="_blank">
               <img class="logo" src="/static/img/logo.png" alt="Transparency Internatinoal Deutschland e.V." />
             </a>
+          </div>
         </div>
         <div class="row">
           <div class="col-md-12">
